fixed: added a lot of things

--- a/style.css
+++ b/style.css
@@ -2,31 +2,80 @@ body {
     font-family: 'Roboto', Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #F3F4F6;
+    background-color: #FFFFFF;
 }
 
 .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #1F2937;
+    padding: 20px;
+}
+
+.hero-container {
     background-color: #1F2937;
     padding: 20px;
     text-align: center;
     font-size: 24px;
     color: white;
+    margin: 0;
+}
+
+.header-logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    margin: 0;
+}
+
+.hero {
     display: flex;
 }
 
 .logo {
-    margin-right: 20px;
-    margin: auto 0;
+    display: block;
+    margin: auto 10px;
 }
+
+.nav {
+display: flex;
+justify-content: flex-end;
+align-items: center;    
+flex: 1;
+margin-right: 50px;
+}
+
 
 ul {
     list-style-type: none;
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 30px;
 }
 
 a {
     color: white;
     text-decoration: none;
 }
+
+.hero {
+    background-color: #1F2937;
+    margin: 0; 
+    display: flex;  
+}
+
+.main-header {
+    padding: 20px;
+    text-align: center;
+    font-size: 48px;
+    color: #F9FAF8;
+}
+
+.placeholder {
+    width: 100%;
+    height: auto;
+    max-width: 600px;
+    margin: 20px auto;
+}
+
