fixed: changed padding for .hero-container

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
 .hero-container {
     background-color: #1F2937;
-    padding: 20px 200px 200px 200px;
+    padding: 20px 200px;
     text-align: center;
     color: white;
     margin: 0;
