--- a/style.css
+++ b/style.css
@@ -91,12 +91,14 @@ a {
 
 .random {
     text-align: center;
+    padding: 50px;
 }
 
 .boxes {
     display: flex;
     justify-content: center;
     gap: 50px;
+    padding: 50px;
 }
 
 .card {  
