--- a/style.css
+++ b/style.css
@@ -104,9 +104,16 @@ a {
 }
 
 .card {  
-border: 5px solid blue;
-padding: 60px 30px;
-border-radius: 15px;
+border: 5px solid #3b82f6;
+width: 200px;
+height: 200px;
+border-radius: 20px;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .random h2 {
