--- a/style.css
+++ b/style.css
@@ -120,3 +120,21 @@ border-radius: 20px;
     font-size: 36px;
     font-weight: 900;
 }
+
+.cuote {
+    background-color: #e5e7eb;
+    padding: 200px;
+}
+
+.greytext {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    text-align: center;
+}
+
+.author {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 70%;
+}
