--- a/style.css
+++ b/style.css
@@ -138,3 +138,20 @@ border-radius: 20px;
     flex-direction: row-reverse;
     width: 70%;
 }
+
+.cta {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+}
+
+.blue-section {
+    background-color: #3b82f6;
+    color: #ffffff;
+    width: 80%;
+    border-radius: 20px;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+}
