--- a/style.css
+++ b/style.css
@@ -144,17 +144,32 @@ border-radius: 20px;
 }
 
 .cta {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    padding: 50px;
+    padding: 50px 150px;
 }
 
 .blue-section {
-    background-color: #3b82f6;
+    background-color: #3882f6;
     color: #ffffff;
-    width: 80%;
     border-radius: 20px;
-    padding: 30px;
+    padding: 30px 60px;
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.cta-text {
+    padding: 0px;
+    margin: 0px;
+}
+
+.blue-section button {
+    background-color: #3882f6;
+    color: #ffffff;
+    border-radius: 7px;
+    border-color: #ffffff;
+    font-size: 16px;
+    cursor: pointer;
+    height: 30px;
+    width: 150px;
+    align-items: center;
 }
