fixed: changes in .card selectors

--- a/style.css
+++ b/style.css
@@ -111,7 +111,10 @@ a {
 border: 5px solid #3b82f6;
 width: 200px;
 height: 200px;
-border-radius: 20px;
+border-radius: 30px;
+padding: 0;
+margin: 0;
+flex-shrink: 0;
 }
 
 .card img {
